--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 ratatui = "0.20.1"
 crossterm = "0.26.1"
 clap = { version = "4.3.0", features = ["derive", "env", "wrap_help", "cargo"] }
+thiserror = "1.0.40"
+
+[dev-dependencies]
+pretty_assertions = "1.3.0"
