--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ ratatui = "0.20.1"
 crossterm = "0.26.1"
 clap = { version = "4.3.0", features = ["derive", "env", "wrap_help", "cargo"] }
 thiserror = "1.0.40"
-elf = "0.7.2"
+goblin = "0.6.1"
 
 [dev-dependencies]
 pretty_assertions = "1.3.0"
