--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ ratatui = "0.21.0"
 crossterm = "0.26.1"
 clap = { version = "4.3.3", features = ["derive", "env", "wrap_help", "cargo"] }
 thiserror = "1.0.40"
-goblin = "0.7.1"
+elf = "0.7.1"
 rust-strings = "0.4.0"
 
 [dev-dependencies]
