--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ clap = { version = "4.3.3", features = ["derive", "env", "wrap_help", "cargo"] }
 thiserror = "1.0.40"
 elf = "0.7.1"
 rust-strings = "0.4.0"
+unicode-width = "0.1.10"
 
 [dev-dependencies]
 pretty_assertions = "1.3.0"
