style(ui): simplify interface

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,13 @@ authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-ratatui = "0.24.0"
+ratatui = "0.26.1"
 crossterm = "0.27.0"
 clap = { version = "4.4.2", features = ["derive", "env", "wrap_help", "cargo"] }
 thiserror = "1.0.48"
 elf = "0.7.1"
 rust-strings = "0.4.0"
-unicode-width = "0.1.10"
-heh = { git = "https://github.com/orhun/heh", branch = "feat/support_as_widget" }
+heh = { git = "https://github.com/orhun/heh", branch = "feat/binsider" }
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
