--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ thiserror = "1.0.48"
 elf = "0.7.1"
 rust-strings = "0.4.0"
 heh = { git = "https://github.com/orhun/heh", branch = "feat/support_as_widget" }
+tui-input = "0.8.0"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
