--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ elf = "0.7.1"
 rust-strings = "0.4.0"
 heh = { git = "https://github.com/orhun/heh", branch = "feat/support_as_widget" }
 tui-input = "0.8.0"
+unicode-width = "0.1.11"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
