feat(dynamic): show tracer summary

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ tui-input = "0.8.0"
 tui-popup = "0.2.4"
 unicode-width = "0.1.11"
 textwrap = "0.16.1"
-lurk-cli = { git = "https://github.com/orhun/lurk", rev = "4d3dbd08cbc0a99271012252d0d248b90b5bb087" }
+lurk-cli = { path = "../lurk" }
 nix = { version = "0.27.1", features = ["ptrace", "signal"] }
 ansi-to-tui = "4.0.1"
 console = "0.15.8"
