--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "binsider"
 version = "0.1.0"
 description = "Analyze ELF binaries like a boss"
 authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
+repository = "https://github.com/orhun/binsider"
 edition = "2021"
 
 [dependencies]
