feat(general): add file information

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,9 @@ console = "0.15.8"
 which = "6.0.1"
 better-panic = "0.3.0"
 tui-big-text = "0.4.2"
+chrono = "0.4.38"
+bytesize = "1.3.0"
+sysinfo = { version = "0.30.12", default-features = false }
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
