--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ chrono = "0.4.38"
 bytesize = "1.3.0"
 sysinfo = { version = "0.30.12", default-features = false }
 webbrowser = "1.0.1"
+lddtree = "0.3.4"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
