--- a/website/package.json
+++ b/website/package.json
@@ -10,10 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.2",
     "@astrojs/starlight": "^0.25.4",
+    "@astrojs/starlight-tailwind": "^2.0.3",
+    "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.10.2",
     "sharp": "^0.32.5",
-    "@astrojs/check": "^0.9.2",
+    "tailwindcss": "^3.4.9",
     "typescript": "^5.5.4"
   }
 }
