chore(cargo): add cargo profiles

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,24 @@ lddtree = "0.3.5"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
+
+[profile.dev]
+opt-level = 0
+debug = true
+panic = "abort"
+
+[profile.test]
+opt-level = 0
+debug = true
+
+[profile.release]
+opt-level = 3
+debug = false
+panic = "unwind"
+lto = true
+codegen-units = 1
+strip = true
+
+[profile.bench]
+opt-level = 3
+debug = false
