--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
     "@astrojs/starlight": "^0.25.4",
     "@astrojs/starlight-tailwind": "^2.0.3",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/dejavu-sans": "^5.0.11",
     "astro": "^4.10.2",
     "sharp": "^0.32.5",
     "tailwindcss": "^3.4.9",
