--- a/website/package.json
+++ b/website/package.json
@@ -16,6 +16,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource/dejavu-sans": "^5.0.11",
     "astro": "^4.10.2",
+    "nanostores": "^0.11.2",
     "sharp": "^0.32.5",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.5.4"
