--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,14 +24,22 @@ jobs:
               TARGET: x86_64-unknown-linux-gnu,
             }
           - {
-              OS: windows-2022,
+              OS: ubuntu-22.04,
               TOOLCHAIN: stable,
-              TARGET: x86_64-pc-windows-msvc,
+              TARGET: x86_64-unknown-linux-musl,
             }
-          - { OS: macos-14, TOOLCHAIN: stable, TARGET: x86_64-apple-darwin }
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v4
+
+      - name: Install dependencies
+        if: matrix.build.TARGET == 'x86_64-unknown-linux-musl'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            --no-install-recommends \
+            --allow-unauthenticated \
+              musl-tools
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@master
