fix(test): apply workaround for binary test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,7 @@ jobs:
       - name: Generate code coverage
         run: |
           cargo build
+          mv target/debug/binsider target/debug/binsider-coverage
           cargo llvm-cov --lcov --output-path lcov.info
         env:
           OUT_DIR: target
