--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,13 @@ keywords = ["analyze", "binary", "tui", "elf"]
 categories = ["command-line-utilities"]
 edition = "2021"
 rust-version = "1.74.1"
+include = [
+  "src/**/*",
+  "Cargo.*",
+  "LICENSE*",
+  "README.md",
+  "CHANGELOG.md",
+]
 
 [dependencies]
 ratatui = "0.28.1"
