--- a/cliff.toml
+++ b/cliff.toml
@@ -7,26 +7,17 @@ repo = "binsider"
 [changelog]
 # changelog header
 header = """
-# [`binsider`](https://binsider.dev)
+<img src="https://raw.githubusercontent.com/orhun/binsider/main/website/src/assets/binsider-logo-dark.png" width="200"></a>
 
-<p align="center">
-
-<img src="https://raw.githubusercontent.com/orhun/binsider/main/website/src/assets/binsider-logo-dark.png#gh-dark-mode-only" width="300"></a>
-<img src="https://raw.githubusercontent.com/orhun/binsider/main/website/src/assets/binsider-logo-light.png#gh-light-mode-only" width="300"></a>
-<br>
-<img src="https://raw.githubusercontent.com/orhun/binsider/main/website/src/assets/binsider-text-dark.png#gh-dark-mode-only" width="170"></a>
-<img src="https://raw.githubusercontent.com/orhun/binsider/main/website/src/assets/binsider-text-light.png#gh-light-mode-only" width="170"></a>
-
-Analyze ELF binaries like a boss 😼🕵️‍♂️
-</p>\n
+[**binsider**](https://binsider.dev): Analyze ELF binaries like a boss 😼🕵️‍♂️\n
 """
 # template for the changelog body
 # https://keats.github.io/tera/docs/#introduction
 body = """
 {% if version %}\
-    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
+    ## {{ version | trim_start_matches(pat="v") }} - {{ timestamp | date(format="%Y-%m-%d") }}
 {% else %}\
-    ## [unreleased]
+    ## unreleased
 {% endif %}\
 {% for group, commits in commits | group_by(attribute="group") %}
     ### {{ group | striptags | trim | upper_first }}
@@ -110,8 +101,8 @@ commit_parsers = [
 # regex for matching git tags
 tag_pattern = "v[0-9].*"
 # regex for skipping tags
-skip_tags = "beta|alpha"
+skip_tags = "beta|alpha|rc"
 # regex for ignoring tags
-ignore_tags = "rc"
+ignore_tags = ""
 # sort the commits inside sections by oldest/newest order
 sort_commits = "newest"
