--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "binsider"
-version = "0.1.0-rc.2"
+version = "0.1.0"
 description = "Analyze ELF binaries like a boss"
 authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
 license = "MIT OR Apache-2.0"
