chore(website): do not deploy website for pull requests

--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -47,6 +47,7 @@ jobs:
 
   deploy:
     name: Deploy
+    if: ${{ github.event_name != 'pull_request' }}
     needs: build
     runs-on: ubuntu-latest
     environment:
