feat(ci): expand the build matrix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,79 @@ jobs:
               OS: ubuntu-22.04,
               TOOLCHAIN: stable,
               TARGET: x86_64-unknown-linux-gnu,
+              ALL_FEATURES: true,
             }
           - {
               OS: ubuntu-22.04,
               TOOLCHAIN: stable,
               TARGET: x86_64-unknown-linux-musl,
+              ALL_FEATURES: true,
+            }
+          - {
+              OS: ubuntu-22.04,
+              TOOLCHAIN: stable,
+              TARGET: i686-unknown-linux-gnu,
+              ALL_FEATURES: false,
+            }
+          - {
+              OS: ubuntu-22.04,
+              TOOLCHAIN: stable,
+              TARGET: i686-unknown-linux-musl,
+              ALL_FEATURES: false,
+            }
+          - {
+              OS: ubuntu-22.04,
+              TOOLCHAIN: stable,
+              TARGET: aarch64-unknown-linux-gnu,
+              ALL_FEATURES: false,
+            }
+          - {
+              OS: ubuntu-22.04,
+              TOOLCHAIN: stable,
+              TARGET: aarch64-unknown-linux-musl,
+              ALL_FEATURES: false,
+            }
+          - {
+              OS: ubuntu-22.04,
+              TOOLCHAIN: stable,
+              TARGET: armv5te-unknown-linux-gnueabi,
+              ALL_FEATURES: false,
+            }
+          - {
+              OS: ubuntu-22.04,
+              TOOLCHAIN: stable,
+              TARGET: armv7-unknown-linux-gnueabihf,
+              ALL_FEATURES: false,
+            }
+          - {
+              OS: ubuntu-22.04,
+              TOOLCHAIN: stable,
+              TARGET: arm-unknown-linux-gnueabi,
+              ALL_FEATURES: false,
+            }
+          - {
+              OS: ubuntu-22.04,
+              TOOLCHAIN: stable,
+              TARGET: arm-unknown-linux-gnueabihf,
+              ALL_FEATURES: false,
+            }
+          - {
+              OS: windows-2022,
+              TOOLCHAIN: stable,
+              TARGET: x86_64-pc-windows-msvc,
+              ALL_FEATURES: false,
+            }
+          - {
+              OS: macos-14,
+              TOOLCHAIN: stable,
+              TARGET: x86_64-apple-darwin,
+              ALL_FEATURES: false,
+            }
+          - {
+              OS: macos-14,
+              TOOLCHAIN: stable,
+              TARGET: aarch64-apple-darwin,
+              ALL_FEATURES: false,
             }
     steps:
       - name: Checkout the repository
@@ -51,7 +119,13 @@ jobs:
         uses: Swatinem/rust-cache@v2
 
       - name: Build the project
-        run: cargo build --locked --verbose
+        shell: bash
+        run: |
+          if [ "${{ matrix.build.ALL_FEATURES }}" = true ]; then
+            cargo build --locked --verbose
+          else
+            cargo build --no-default-features --locked --verbose
+          fi
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
