chore(ci): add powerpc64le-unknown-linux-gnu target

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,6 +85,12 @@ jobs:
               ALL_FEATURES: false,
             }
           - {
+              OS: ubuntu-22.04,
+              TOOLCHAIN: stable,
+              TARGET: powerpc64le-unknown-linux-gnu,
+              ALL_FEATURES: false,
+            }
+          - {
               OS: windows-2022,
               TOOLCHAIN: stable,
               TARGET: x86_64-pc-windows-msvc,
