--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,10 @@ include = [
   "CHANGELOG.md",
 ]
 
+[features]
+default = ["dynamic-analysis"]
+dynamic-analysis = ["lurk-cli"]
+
 [dependencies]
 ratatui = "0.28.1"
 clap = { version = "4.5.17", features = ["derive", "env", "wrap_help", "cargo"] }
@@ -30,7 +34,7 @@ tui-input = "0.10.1"
 tui-popup = "0.5.0"
 unicode-width = "0.1.11"
 textwrap = "0.16.1"
-lurk-cli = "0.3.6"
+lurk-cli = { version = "0.3.7", optional = true }
 nix = { version = "0.29.0", features = ["ptrace", "signal"] }
 ansi-to-tui = "6.0.0"
 console = "0.15.8"
