chore(ci): add mipsel-unknown-linux-gnu as a target

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -86,6 +86,12 @@ jobs:
               ALL_FEATURES: false,
             }
           - {
+              OS: ubuntu-22.04,
+              TOOLCHAIN: stable,
+              TARGET: mipsel-unknown-linux-gnu,
+              ALL_FEATURES: false,
+            }
+          - {
               OS: windows-2022,
               TOOLCHAIN: stable,
               TARGET: x86_64-pc-windows-msvc,
