--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,7 +92,7 @@ jobs:
             }
           - {
               OS: ubuntu-22.04,
-              TOOLCHAIN: stable,
+              TOOLCHAIN: nightly,
               TARGET: mipsel-unknown-linux-gnu,
               ALL_FEATURES: false,
             }
