--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ tui-input = "0.10.1"
 tui-popup = "0.5.0"
 unicode-width = "0.1.11"
 textwrap = "0.16.1"
-lurk-cli = { git = "https://github.com/orhun/lurk", branch = "fix/canonicalize_binary", optional = true }
+lurk-cli = { version = "0.3.8", optional = true }
 nix = { version = "0.29.0", features = ["ptrace", "signal"] }
 ansi-to-tui = "6.0.0"
 console = "0.15.8"
