--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,6 +145,27 @@ jobs:
           name: binsider-${{ matrix.build.TARGET }}-assets
           path: target/debug/binsider*
 
+  nix-flake:
+    name: Build Nix flake
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v4
+
+      - name: Install Nix
+        uses: nixbuild/nix-quick-install-action@v27
+
+      - name: Restore and cache Nix store
+        uses: nix-community/cache-nix-action@v5
+        with:
+          primary-key: nix-${{ runner.os }}-${{ hashFiles('**/*.nix') }}
+          restore-prefixes-first-match: nix-${{ runner.os }}-
+          gc-max-store-size-linux: 1073741824
+          purge: false
+
+      - name: Check Nix flake
+        run: nix flake check --all-systems
+
   test:
     name: Test
     runs-on: ubuntu-latest
