--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,28 +24,31 @@ default = ["dynamic-analysis"]
 dynamic-analysis = ["lurk-cli"]
 
 [dependencies]
+
 ratatui = "0.28.1"
-clap = { version = "4.5.20", features = ["derive", "env", "wrap_help", "cargo"] }
-thiserror = "2.0.11"
+clap = { version = "4.5.53", features = ["derive", "env", "wrap_help", "cargo"] }
+thiserror = "2.0.17"
 elf = "0.7.1"
 rust-strings = "0.6.0"
 heh = "0.6.1"
 tui-input = "0.11.1"
 tui-popup = "0.5.0"
 unicode-width = "0.2.0"
-textwrap = "0.16.1"
-lurk-cli = { version = "0.3.9", optional = true }
+textwrap = "0.16.2"
+lurk-cli = { version = "=0.3.10", optional = true }
+serde = { version = "=1.0.217" }
+serde_derive = { version = "=1.0.217" }
 nix = { version = "0.29.0", features = ["ptrace", "signal"] }
 ansi-to-tui = "6.0.0"
-console = "0.15.8"
-which = "7.0.1"
+console = "0.15.11"
+which = "8.0.0"
 better-panic = "0.3.0"
 tui-big-text = "0.6.0"
-chrono = "0.4.38"
-bytesize = "1.3.0"
-sysinfo = { version = "0.33.1", default-features = false, features = ["user"] }
-webbrowser = "1.0.2"
-lddtree = "0.3.5"
+chrono = "0.4.42"
+bytesize = "2.3.0"
+sysinfo = { version = "0.37.2", default-features = false, features = ["user"] }
+webbrowser = "1.0.6"
+lddtree = "0.3.8"
 itertools = "0.14.0"
 termbg = "0.6.2"
 
@@ -72,3 +75,4 @@ strip = true
 [profile.bench]
 opt-level = 3
 debug = false
+
